Contact Message Change Format

--- a/RMS.App/Views/Shared/_Layout.cshtml
+++ b/RMS.App/Views/Shared/_Layout.cshtml
@@ -148,16 +148,16 @@
                             <div class="row">
                                 <div class="col-md-12">
                                     <h4 class="text-dark">
-                                        <i class="fa fa-envelope-open" aria-hidden="true"></i> Mail Service
+                                        <i class="fa fa-envelope-open" aria-hidden="true"></i> Message Service
                                     </h4>
                                     <hr />
                                 </div>
                                 <br /><br />
                                 <div class="col-md-12" style="font-size: 16px;">
                                     <div class="col-md-12 col-12">
-                                        <a href="#" class="text-black font-weight-normal" data-toggle="collapse" data-target="#demo10"><i class="fa fa-envelope-o" aria-hidden="true"></i> Message</a><br />
+                                        <a href="#" class="text-black font-weight-normal" data-toggle="collapse" data-target="#message"><i class="fa fa-envelope-o" aria-hidden="true"></i> Message</a><br />
                                     </div>
-                                    <div id="demo10" class="col-md-12 col-12 collapse clearfix" style="margin-left: 35px;">
+                                    <div id="message" class="col-md-12 col-12 collapse clearfix" style="margin-left: 35px;">
                                         @Html.ActionLink("Message", "GetMessage", "Queue")<br />
                                     </div>
                                 </div>
