--- a/RMS.App/Views/Home/Contact.cshtml
+++ b/RMS.App/Views/Home/Contact.cshtml
@@ -68,7 +68,6 @@
             <div class="col-md-6">
                 @Html.EditorFor(model => model.Email, new {htmlAttributes = new {@class = "form-control"}})
                 @Html.ValidationMessageFor(model => model.Email, "", new {@class = "text-danger"})
-                <p class="text-danger">@ViewBag.Message1</p>
             </div>
 
         </div>
@@ -79,7 +78,6 @@
             <div class="col-md-6">
                 @Html.EditorFor(model => model.PhoneNo, new {htmlAttributes = new {@class = "form-control"}})
                 @Html.ValidationMessageFor(model => model.PhoneNo, "", new {@class = "text-danger"})
-                <p class="text-danger">@ViewBag.Message1</p>
             </div>
 
         </div>
@@ -91,17 +89,15 @@
             <div class="col-md-6">
                 @Html.TextArea("Message", "This is Message", new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.Message, "", new { @class = "text-danger" })
-                <p class="text-danger">@ViewBag.Message1</p>
             </div>
 
         </div>
-
 
         <div class="form-group row">
             <div class="control-label col-md-2 "></div>
             <div class="col-md-6 ">
                 <input type="submit" value="Send" class="btn btn-success" /> &nbsp;
-                @Html.ActionLink("Back to List", "Index", null, htmlAttributes: new { @class = "btn btn-info" })
+                @*@Html.ActionLink("Back to List", "Index", null, htmlAttributes: new { @class = "btn btn-info" })*@
 
             </div>
         </div>
