--- a/RMS.App/Views/MailServices/Create.cshtml
+++ b/RMS.App/Views/MailServices/Create.cshtml
@@ -7,7 +7,7 @@
 
 <h2>Send Mail</h2>
 <hr />
-@using (Html.BeginForm()) 
+@using (Html.BeginForm("Create","MailServices",FormMethod.Post,new { enctype = "multipart/form-data" }))
 {
     @Html.AntiForgeryToken()
     
@@ -22,14 +22,6 @@
             </div>
         </div>
 
-        @*<div class="form-group">
-            @Html.LabelFor(model => model.From, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.From, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.From, "", new { @class = "text-danger" })
-            </div>
-        </div>*@
-
         <div class="form-group row">
             @Html.LabelFor(model => model.Subject, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-7">
@@ -39,33 +31,23 @@
         </div>
 
         <div class="form-group row">
-            @Html.LabelFor(model => model.Body, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.Body, htmlAttributes: new {@class = "control-label col-md-2"})
             <div class="col-md-7">
-                @Html.EditorFor(model => model.Body, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Body, "", new { @class = "text-danger" })
+                @Html.EditorFor(model => model.Body, new {htmlAttributes = new {@class = "form-control"}})
+                @Html.ValidationMessageFor(model => model.Body, "", new {@class = "text-danger"})
             </div>
         </div>
-
-        @*<div class="form-group">
-            @Html.LabelFor(model => model.MailSendingDateTime, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.MailSendingDateTime, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.MailSendingDateTime, "", new { @class = "text-danger" })
+        <div class="form-group row">
+            <div class="col-md-2"></div>
+            <div class="btn btn-default">
+                <input type="file" name="uploadFile"/>
             </div>
-        </div>*@
-
-        @*<div class="form-group">
-            @Html.LabelFor(model => model.RequisitionId, "RequisitionId", htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.DropDownList("RequisitionId", null, htmlAttributes: new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.RequisitionId, "", new { @class = "text-danger" })
-            </div>
-        </div>*@
+        </div>
 
         <div class="form-group row">
             <div class="col-md-2"></div>
             <div class="col-md-7">
-                <input type="submit" value="Send Mail" class="btn btn-default"/> &nbsp;
+                <input type="submit" value="Send Mail" class="btn btn-success"/> &nbsp;
                 @Html.ActionLink("Back to List", "Index", null, new { @class = "btn btn-info" })
             </div>
         </div>
