--- a/RMS.App/Views/Shared/_MenuBar.cshtml
+++ b/RMS.App/Views/Shared/_MenuBar.cshtml
@@ -48,11 +48,9 @@
                     {
                         <li>@Html.ActionLink("Requisition Queue", "RequisitionQueue", "Queue")</li>
                         <li>@Html.ActionLink("Send Request", "Create", "Requisitions")</li>
-                        
-                        <li class="fa fa-comment float-none">@Html.ActionLink("Feedback", "Index", "Requisitions")</li>
-                        <li class="fa fa-comment float-left">@Html.ActionLink("GatePass", "Index", "GatePass")</li>
+                        <li>@Html.ActionLink("GatePass", "Index", "GatePass")</li>
+                        <li>@Html.ActionLink("Feedback", "Index", "Requisitions" )<i class="fa fa-comment"></i></li>
 
-                        
                     }
                    
 
