--- a/RMS.App/Views/Shared/_Layout.cshtml
+++ b/RMS.App/Views/Shared/_Layout.cshtml
@@ -88,22 +88,43 @@
                                 </div>
                                 <br /><br />
                                 <div class="col-md-12">
-                                    <a class="dropdown-item" href="@Url.Action("Index", "Schedule")"><i class="fa fa-car"></i> ScheduleCalendar</a>
+                                    <a class="dropdown-item" href="@Url.Action("Index", "Schedule")"><i class="fa fa-calendar"></i> ScheduleCalendar</a>
                                 </div>
-                                <br />
-
-
+                                <br/><br/>
                             </div>
                         }
-                        <!--Mail Service-->
+
+                        <!--Service Section-->
+
                         @if (User.IsInRole("Controller"))
                         {
-                            <br/><br/>
+                            <!----Report Menu-->
                             <div class="row">
                                 <div class="col-md-12">
-                                    <h4 class="text-dark">
-                                        <i class="fa fa-envelope-open" aria-hidden="true"></i> Mail Service
-                                    </h4>
+                                    <h3 class="text-dark">
+                                        <i class="fa fa-print" aria-hidden="true"></i> Report
+                                    </h3>
+                                    <hr/>
+                                </div>
+                                <br/><br/>
+                                <div class="col-md-12" style="font-size: 16px;">
+                                    <div class="col-md-12 col-12">
+                                        <a href="#" class="text-black font-weight-normal" data-toggle="collapse" data-target="#report"><i class="fa fa-print" aria-hidden="true"></i> Report</a><br/>
+                                    </div>
+                                    <div id="report" class="col-md-12 col-12 collapse clearfix" style="margin-left: 35px;">
+                                        @Html.ActionLink("Assign Requisition", "ReportIndex", "AssignRequisitions")<br/>
+
+                                    </div>
+                                </div>
+                                <br/><br/>
+                            </div>
+
+                             <!--Mail and message Service-->
+                            <div class="row">
+                                <div class="col-md-12">
+                                    <h3 class="text-dark">
+                                        <i class="fa fa-search" aria-hidden="true"></i> Service
+                                    </h3>
                                     <hr/>
                                 </div>
                                 <br/><br/>
@@ -116,43 +137,7 @@
                                         @Html.ActionLink("List Of Mail", "Index", "MailServices")
                                     </div>
                                 </div>
-                                <br/><br/>
-                            </div>
-                           
-
-                            <!----Report Menu-->
-                            <div class="row">
-                                <div class="col-md-12">
-                                    <h4 class="text-dark">
-                                        <i class="fa fa-envelope-open" aria-hidden="true"></i> Report
-                                    </h4>
-                                    <hr/>
-                                </div>
-                                <br/><br/>
-                                <div class="col-md-12" style="font-size: 16px;">
-                                    <div class="col-md-12 col-12">
-                                        <a href="#" class="text-black font-weight-normal" data-toggle="collapse" data-target="#report"><i class="fa fa-envelope-o" aria-hidden="true"></i> Report</a><br/>
-                                    </div>
-                                    <div id="report" class="col-md-12 col-12 collapse clearfix" style="margin-left: 35px;">
-                                        @Html.ActionLink("Assign Requisition", "ReportIndex", "AssignRequisitions")<br/>
-                                        
-                                    </div>
-                                </div>
-                                <br/><br/>
-                            </div>
-                        }
-                        @if (User.IsInRole("Controller"))
-                        {
-                             <!-------Message Menu-->
-                            <br /><br />
-                            <div class="row">
-                                <div class="col-md-12">
-                                    <h4 class="text-dark">
-                                        <i class="fa fa-envelope-open" aria-hidden="true"></i> Message Service
-                                    </h4>
-                                    <hr />
-                                </div>
-                                <br /><br />
+                                <!-------Message Menu-->
                                 <div class="col-md-12" style="font-size: 16px;">
                                     <div class="col-md-12 col-12">
                                         <a href="#" class="text-black font-weight-normal" data-toggle="collapse" data-target="#message"><i class="fa fa-envelope-o" aria-hidden="true"></i> Message</a><br />
@@ -161,8 +146,8 @@
                                         @Html.ActionLink("Message", "GetMessage", "Queue")<br />
                                     </div>
                                 </div>
-                                <br /><br />
-                            </div>
+                            </div>   
+                            
                         }
                     </div>
 
