Employee and driver validation checked

--- a/RMS.App/Views/Employees/Delete.cshtml
+++ b/RMS.App/Views/Employees/Delete.cshtml
@@ -139,13 +139,13 @@
                             {
                                 if (item.AddressType == "Present Address")
                                 {
-                                    @Html.DisplayFor(modelItem => item.AddressLine1)<br />
-                                    @Html.DisplayFor(modelItem => item.AddressLine2)<br />
-                                    @Html.DisplayFor(modelItem => item.PostOffice)<br />
-                                    @Html.DisplayFor(modelItem => item.PostCode)<br />
-                                    @Html.DisplayFor(modelItem => item.Division.Name)<br />
-                                    @Html.DisplayFor(modelItem => item.District.Name)<br />
-                                    @Html.DisplayFor(modelItem => item.Upazila.Name)<br /><br />
+                                    <b>House/Road No : </b>@Html.DisplayFor(modelItem => item.AddressLine1)<br />
+                                    <b>Village/Moholla : </b>@Html.DisplayFor(modelItem => item.AddressLine2)<br />
+                                    <b>Post Office : </b>@Html.DisplayFor(modelItem => item.PostOffice)<br />
+                                    <b>Post Code : </b>@Html.DisplayFor(modelItem => item.PostCode)<br />
+                                    <b>Division : </b>@Html.DisplayFor(modelItem => item.Division.Name)<br />
+                                    <b>District : </b>@Html.DisplayFor(modelItem => item.District.Name)<br />
+                                    <b>Upz/Thana : </b>@Html.DisplayFor(modelItem => item.Upazila.Name)<br /><br />
                                 }
                             }
                         </div>
@@ -164,13 +164,13 @@
                             {
                                 if (item.AddressType == "Permanent Address")
                                 {
-                                    @Html.DisplayFor(modelItem => item.AddressLine1)<br />
-                                    @Html.DisplayFor(modelItem => item.AddressLine2)<br />
-                                    @Html.DisplayFor(modelItem => item.PostOffice)<br />
-                                    @Html.DisplayFor(modelItem => item.PostCode)<br />
-                                    @Html.DisplayFor(modelItem => item.Division.Name)<br />
-                                    @Html.DisplayFor(modelItem => item.District.Name)<br />
-                                    @Html.DisplayFor(modelItem => item.Upazila.Name)<br /><br />
+                                    <b>House/Road No : </b>@Html.DisplayFor(modelItem => item.AddressLine1)<br />
+                                    <b>Village/Moholla : </b>@Html.DisplayFor(modelItem => item.AddressLine2)<br />
+                                    <b>Post Office : </b>@Html.DisplayFor(modelItem => item.PostOffice)<br />
+                                    <b>Post Code : </b>@Html.DisplayFor(modelItem => item.PostCode)<br />
+                                    <b>Division : </b>@Html.DisplayFor(modelItem => item.Division.Name)<br />
+                                    <b>District : </b>@Html.DisplayFor(modelItem => item.District.Name)<br />
+                                    <b>Upz/Thana : </b>@Html.DisplayFor(modelItem => item.Upazila.Name)<br /><br />
                                 }
                             }
                         </div>
