--- a/RMS.App/Views/Employees/Create.cshtml
+++ b/RMS.App/Views/Employees/Create.cshtml
@@ -387,6 +387,7 @@
                     <div class="col-md-6">
                         @Html.TextBoxFor(model => model.Email, null, htmlAttributes: new {@class = "form-control", @placeholder = "Email"})
                         @Html.ValidationMessageFor(model => model.Email, "", new {@class = "text-danger"})
+                        <p class="text-danger">@ViewBag.Message1</p>
                     </div>
                 </div>
 
