--- a/RMS.App/Views/Account/Login.cshtml
+++ b/RMS.App/Views/Account/Login.cshtml
@@ -57,7 +57,7 @@
                 </div>
                 <div class="form-group">
                     <div class="col-md-offset-2 col-md-10">
-                        <input type="submit" value="Log in" class="btn btn-lg btn-outline-info fa fa-user" />
+                        <input type="submit" value="Log In" class="btn btn-lg btn-outline-info fa fa-user" />
                     </div>
                 </div>
 
