--- a/RMS.App/Views/AssignRequisitions/ReportIndex.cshtml
+++ b/RMS.App/Views/AssignRequisitions/ReportIndex.cshtml
@@ -1,16 +1,19 @@
 ﻿
 @{
-    ViewBag.Title = "ReportIndex";
+    ViewBag.Title = "Report Index";
 }
 
 <h2>Assign Report</h2>
-<div class="row">
-    <div class="form-horizontal">
-        @if (ViewBag.ReportViewer != null)
-        {
-            Html.RenderPartial("_LoadReport");
-        }
+<hr/>
+<br/>
+<div style="width: 100%">
+    
+    @if (ViewBag.ReportViewer != null)
+    {
+        Html.RenderPartial("_LoadReport");
 
-    </div>    
-</div>
+    }
+
+</div>    
+
 
