--- a/RMS.App/Views/Queue/RequisitionQueue.cshtml
+++ b/RMS.App/Views/Queue/RequisitionQueue.cshtml
@@ -36,10 +36,9 @@
                 <div class="card-body-icon">
                     <i class="fa fa-fw fa-list"></i>
                 </div>
-                <div class="mr-5">@ViewBag.CompleteRequisition Requisitions Served</div>
+                <div class="mr-5">@ViewBag.AssignedRequisition Assigned Requisition</div>
             </div>
-
-            <a class="card-footer text-white clearfix small z-1" href="@Url.Action("CompleteRequest", "AssignRequisitions")">
+            <a class="card-footer text-white clearfix small z-1" href="@Url.Action("Index", "AssignRequisitions")">
                 <span class="float-left">View Details</span>
                 <span class="float-right">
                     <i class="fa fa-angle-right"></i>
@@ -48,7 +47,7 @@
         </div>
     </div>
     <div class="col-xl-3 col-sm-6 mb-3">
-        <div class="card text-white bg-success o-hidden h-100">
+        <div class="card text-white bg-secondary o-hidden h-100">
             <div class="card-body">
                 <div class="card-body-icon">
                     <i class="fa fa-fw fa-support"></i>
@@ -64,14 +63,14 @@
         </div>
     </div>
     <div class="col-xl-3 col-sm-6 mb-3">
-        <div class="card text-white bg-danger o-hidden h-100">
+        <div class="card text-white bg-success o-hidden h-100">
             <div class="card-body">
                 <div class="card-body-icon">
                     <i class="fa fa-fw fa-shopping-cart"></i>
                 </div>
-                <div class="mr-5">@ViewBag.CancelRequisition Cancelled Requisition!</div>
+                <div class="mr-5">@ViewBag.CompleteRequisition Completed Requisition!</div>
             </div>
-            <a class="card-footer text-white clearfix small z-1" href="@Url.Action("Index", "CancelRequisition")">
+            <a class="card-footer text-white clearfix small z-1" href="@Url.Action("CompleteRequest", "AssignRequisitions")">
                 <span class="float-left">View Details</span>
                 <span class="float-right">
                     <i class="fa fa-angle-right"></i>
@@ -131,38 +130,40 @@
                 </a>
             </div>
         </div>
-        <div class="col-xl-3 col-sm-6 mb-3">
-            <div class="card text-white bg-success o-hidden h-100">
-                <div class="card-body">
-                    <div class="card-body-icon">
-                        <i class="fa fa-fw fa-shopping-cart"></i>
-                    </div>
-                    <div class="mr-5">@ViewBag.CompleteRequisition Completed Requisition!</div>
+    
+    <div class="col-xl-3 col-sm-6 mb-3">
+        <div class="card text-white bg-secondary o-hidden h-100">
+            <div class="card-body">
+                <div class="card-body-icon">
+                    <i class="fa fa-fw fa-support"></i>
                 </div>
-                <a class="card-footer text-white clearfix small z-1" href="@Url.Action("CompleteRequest", "AssignRequisitions")">
-                    <span class="float-left">View Details</span>
-                    <span class="float-right">
-                        <i class="fa fa-angle-right"></i>
-                    </span>
-                </a>
+                <div class="mr-5">@ViewBag.AllRequisitionCount  Totla Requisition</div>
             </div>
+            <a class="card-footer text-white clearfix small z-1" href="@Url.Action("Index", "Requisitions")">
+                <span class="float-left">View Details</span>
+                <span class="float-right">
+                    <i class="fa fa-angle-right"></i>
+                </span>
+            </a>
         </div>
-        <div class="col-xl-3 col-sm-6 mb-3">
-            <div class="card text-white bg-secondary o-hidden h-100">
-                <div class="card-body">
-                    <div class="card-body-icon">
-                        <i class="fa fa-fw fa-support"></i>
-                    </div>
-                    <div class="mr-5">@ViewBag.OnProcessRequest  On Process Request</div>
+    </div>
+    <div class="col-xl-3 col-sm-6 mb-3">
+        <div class="card text-white bg-danger o-hidden h-100">
+            <div class="card-body">
+                <div class="card-body-icon">
+                    <i class="fa fa-fw fa-shopping-cart"></i>
                 </div>
-                <a class="card-footer text-white clearfix small z-1" href="@Url.Action("OnProcess", "AssignRequisitions")">
-                    <span class="float-left">View Details</span>
-                    <span class="float-right">
-                        <i class="fa fa-angle-right"></i>
-                    </span>
-                </a>
+                <div class="mr-5">@ViewBag.CancelRequisition Cancelled Requisition!</div>
             </div>
+            <a class="card-footer text-white clearfix small z-1" href="@Url.Action("Index", "CancelRequisition")">
+                <span class="float-left">View Details</span>
+                <span class="float-right">
+                    <i class="fa fa-angle-right"></i>
+                </span>
+            </a>
         </div>
+    </div>
+        
 </div>
 <!-- /.container-fluid-->
 <!-- /.content-wrapper-->
