--- a/RMS.App/Views/Shared/_LoadReport.cshtml
+++ b/RMS.App/Views/Shared/_LoadReport.cshtml
@@ -1,7 +1,7 @@
 ﻿
 @using Microsoft.Reporting.WebForms
 @using ReportViewerForMvc
-<div class="row">
+<div class="row" style="width: 100%">
     @if (ViewBag.ReportViewer != null)
     {
         @Html.ReportViewer(ViewBag.ReportViewer as ReportViewer, new {@class="report"})
