--- a/RMS.App/Views/Requisitions/Feedback.cshtml
+++ b/RMS.App/Views/Requisitions/Feedback.cshtml
@@ -71,19 +71,11 @@
                 </div>
             </div>
             <div class="form-group row">
-                @Html.Label("Requist For", htmlAttributes: new {@class = "control-label col-md-3"})
+                @Html.Label("Request For", htmlAttributes: new {@class = "control-label col-md-3"})
                 <div class="col-md-9">
                     @Html.EditorFor(model => model.Requisition.RequestFor, new {htmlAttributes = new {@class = "form-control", @readOnly = "readonly"}})
                 </div>
             </div>
-
-            @*<div class="form-group row">
-                Like
-                <div class="col-md-9">
-                    @Html.ActionLink("Like", "Like", new {id = Model.Id}, new {@class = "btn-btn-default"})
-                </div>
-            </div>*@
-
         </div>
     </div>
     @Html.HiddenFor(model => model.Requisition.Id)
@@ -138,18 +130,19 @@
                                 <tr>
                                     @if (comment.EmployeeId == null)
                                     {
-                                        <td style="width: 30%" class="bold">Employee Name :<br />@comment.Requisition.Employee.FullName</td>
+                                        <td style="width: 30%" class="bold"> Mr. <b class="highlighted">@comment.Requisition.Employee.FullName</b> Says That</td>
 
                                     }
                                     @if (comment.EmployeeId != null)
                                     {
-                                        <td style="width: 30%">Employee Name:<br />@comment.Employee.FullName</td>
+                                        <td style="width: 30%">Mr. <b class="highlighted">@comment.Employee.FullName</b> Replyed That</td>
 
                                     }
-                                    <td style="width: 55%">Comment :<br/>@comment.CommentText</td>
+                                    <td style="width: 55%">@comment.CommentText</td>
                                     @if (User.IsInRole("Administrator") || User.IsInRole("Controller"))
                                     {
-                                        <td style="width: 10%">@Html.ActionLink("Reply", "Reply", new {feedbackId = @comment.Id}, new {@class = "btn btn-outline-primary btn-sm"})</td>
+                                        <td style="width: 10%">@Html.ActionLink("Reply", "Reply", new { feedbackId = @comment.Id})</td>
+                                        @*<td><button type="button" class="btn btn-primary" data-toggle="modal" data-target="#replyModal" data-url="@Url.Action("Reply","Requisitions", new {feedbackId = @comment.Id})">Reply</button></td>*@
                                     }
 
                                 </tr>
@@ -158,6 +151,73 @@
                         </div>
                 </div>
             }
+
+            <!--------------Comment Reply Section Start-->
+                @*<div class="modal fade" id="replyModal">
+                <div class="modal-dialog">
+                    <div class="modal-content">
+                        <div class="modal-header table-info">
+                            <h3 class="modal-title">@Html.EditorFor(model => model.Requisition.RequisitionNumber, new { htmlAttributes = new { @class = "form-control", @readOnly = "readonly" } })</h3>
+                            <a href="#" class="close" data-dismiss="modal">&times;</a>
+                        </div>
+                        <div class="modal-body table-light">
+                            
+                            @using (Html.BeginForm("Reply", "Requisitions", FormMethod.Post))
+                            {
+                                @Html.AntiForgeryToken()
+
+                                <div class="form-horizontal">
+
+                                    @Html.HiddenFor(model => model.Id)
+                                    @Html.HiddenFor(model => model.RequisitionId)
+                                    @Html.Hidden("returnUrl", this.Request.RawUrl)
+                                    @Html.ValidationSummary(true, "", new {@class = "text-danger"})
+
+                                    <div class="form-group row">
+                                        @if (ViewBag.Msg != null)
+                                        {
+                                            <div>@ViewBag.Msg</div>
+                                        }
+                                    </div>
+                                    <div class="form-group row">
+                                        @Html.LabelFor(model => model.CommentText, htmlAttributes: new {@class = "control-label col-md-12"})
+                                        <div class="col-md-12">
+                                            @Html.EditorFor(model => model.CommentText, new {htmlAttributes = new {@class = "form-control"}})
+                                            @Html.ValidationMessageFor(model => model.CommentText, "", new {@class = "text-danger"})
+                                        </div>
+                                    </div>
+
+
+                                    <div class="form-group row" hidden="hidden">
+                                        @Html.LabelFor(model => model.EmployeeId, htmlAttributes: new {@class = "control-label col-md-12"})
+                                        <div class="col-md-3">
+                                            @Html.EditorFor(model => model.EmployeeId, new {htmlAttributes = new {@class = "form-control"}})
+                                        </div>
+                                    </div>
+
+                                    <div class="form-group row">
+                                        <div class="col-md-5">
+                                            <input type="submit" value="Reply" class="btn btn-primary"/> &nbsp;
+                                            @Html.ActionLink("Back to List", "RequisitionList", "Requisitions", null, new {@class = "btn btn-info"})*@
+                                        @*</div>
+                                    </div>
+                                </div>*@
+                            @*}*@
+
+
+
+
+<!----------
+                        </div>
+                        <div class="modal-footer">
+                            <a href="#" class="btn btn-warning" title="Close" data-dismiss="modal"> Close </a>
+                        </div>
+                    </div>
+                </div>
+            </div>-->
+                
+                
+               <!-------------Comment Reply Section End-->
         </div>
     </div>
     <br/>
@@ -167,4 +227,7 @@
 @section Scripts {
 
     @Scripts.Render("~/bundles/jqueryval")
+
+ 
+
 }
