--- a/RMS.App/Views/Requisitions/RequisitionList.cshtml
+++ b/RMS.App/Views/Requisitions/RequisitionList.cshtml
@@ -4,6 +4,17 @@
 @{
     Layout = null;
 }
+
+@section styles{
+
+    <link href="~/Content/bootstrap-datetimepicker.css" rel="stylesheet" />
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.3.1/semantic.min.css" />
+    <link href="https://cdn.datatables.net/1.10.19/css/dataTables.semanticui.min.css" rel="stylesheet" />
+
+    <link href="https://cdn.datatables.net/responsive/2.2.3/css/responsive.bootstrap.min.css" rel="stylesheet" />
+
+}
 @if (TempData["msg"] != null)
 {
     <div class="alert alert-success">
@@ -29,7 +40,7 @@
     <p>
         @Html.ActionLink("Create New", "Create", null, htmlAttributes: new {@class = "btn btn-success"})
     </p>
-    <table id="example1" class="table table-striped table-bordered table-hover dt-responsive nowrap" style="width: 100%">
+    <table id="example" class="table table-striped table-bordered table-hover dt-responsive nowrap" style="width: 100%">
         <thead>
         <tr class="bg-info">
             <th>
@@ -56,6 +67,12 @@
 
             <th>
                 @Html.DisplayNameFor(model => model.Requisition.RequisitionType)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Requisition.RequestFor)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Requisition.Description)
             </th>
             <th>
                 Action
@@ -97,6 +114,14 @@
 
                         <td>
                             @Html.DisplayFor(modelItem => item.Requisition.RequisitionType)
+                        </td>
+
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Requisition.RequestFor)
+                        </td>
+
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Requisition.Description)
                         </td>
                         <td>
                             @if (item.StatusType == "New")
@@ -143,6 +168,12 @@
                 @Html.DisplayNameFor(model => model.Requisition.RequisitionType)
             </th>
             <th>
+                @Html.DisplayNameFor(model => model.Requisition.RequestFor)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Requisition.Description)
+            </th>
+            <th>
                 Action
             </th>
         </tr>
@@ -150,3 +181,32 @@
     </table>
 </div>
     
+@section Scripts {
+
+    @Scripts.Render("~/bundles/jqueryval")
+
+    <script src="~/Scripts/moment.js"></script>
+    <script src="~/Scripts/bootstrap-datetimepicker.js"></script>
+    <script src="~/Scripts/RequisitionJs/RequisitionDataTime.js"></script>
+    <script src="~/Scripts/chosenDD/chosen_DD.js"></script>
+
+    <script src="https://cdn.datatables.net/1.10.19/js/jquery.dataTables.min.js" type="text/javascript"></script>
+    <script src="https://cdn.datatables.net/1.10.19/js/dataTables.semanticui.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.3.1/semantic.min.js"></script>
+
+    <script type="text/javascript" src="https://cdn.datatables.net/responsive/2.2.3/js/dataTables.responsive.min.js"></script>
+    <script type="text/javascript" src="https://cdn.datatables.net/responsive/2.2.3/js/responsive.bootstrap.min.js"></script>
+
+    <script>
+
+        $(document).ready(function () {
+            $('#example').DataTable({ responsive: true, "autoWidth": false });
+
+        });
+
+        $(document).ready(function () {
+            $('#example1').DataTable({ responsive: true, "autoWidth": false });
+
+        });
+    </script>
+}
