--- a/RMS.App/Views/Shared/_LayoutLogIn.cshtml
+++ b/RMS.App/Views/Shared/_LayoutLogIn.cshtml
@@ -15,7 +15,6 @@
     <meta charset="UTF-8">
     <!-- Site Title -->
     <title>@ViewBag.Title</title>
-    <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,400,300,500,600,700" rel="stylesheet">
     <!--
     CSS
     ============================================= -->
@@ -64,10 +63,10 @@
                     <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                 </p>
                 <div class="col-lg-4 col-sm-12 footer-social">
-                    <a href="https://www.facebook.com/chittoranjan.sarker"><i class="fa fa-facebook"></i></a>
-                    <a href="https://twitter.com/chittoranjan"><i class="fa fa-twitter"></i></a>
-                    <a href="https://plus.google.com/u/0/+ChittoRanjanSarker"><i class="fa fa-google-plus"></i></a>
-                    <a href="https://www.linkedin.com/in/chitto-ranjan-sarker-94646557/"><i class="fa fa-linkedin"></i></a>
+                    <a href="#"><i class="fa fa-facebook"></i></a>
+                    <a href="#"><i class="fa fa-twitter"></i></a>
+                    <a href="#"><i class="fa fa-google-plus"></i></a>
+                    <a href="#"><i class="fa fa-linkedin"></i></a>
                 </div>
             </div>
         </div>
