--- a/RMS.App/Views/Requisitions/RequisitionList.cshtml
+++ b/RMS.App/Views/Requisitions/RequisitionList.cshtml
@@ -5,16 +5,6 @@
     Layout = null;
 }
 
-@section styles{
-
-    <link href="~/Content/bootstrap-datetimepicker.css" rel="stylesheet" />
-
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.3.1/semantic.min.css" />
-    <link href="https://cdn.datatables.net/1.10.19/css/dataTables.semanticui.min.css" rel="stylesheet" />
-
-    <link href="https://cdn.datatables.net/responsive/2.2.3/css/responsive.bootstrap.min.css" rel="stylesheet" />
-
-}
 @if (TempData["msg"] != null)
 {
     <div class="alert alert-success">
@@ -22,29 +12,31 @@
     </div>
 }
 
-
-
-
 <div style="margin-left: 15px;">
+    @if (TempData["msg1"] != null)
+    {
+        <div class="alert alert-warning">
+            @Html.Raw(TempData["msg1"])
+        </div>
+    }
+</div>
 
-@if (TempData["msg1"] != null)
-{
-    <div class="alert alert-warning">
-        @Html.Raw(TempData["msg1"])
-    </div>
-}
-
-    </div>
-<div style="margin-left: 15px;" class="responsive">
+<div style="margin-left: 15px;" class="responsive nowrap">
 
     <p>
         @Html.ActionLink("Create New", "Create", null, htmlAttributes: new {@class = "btn btn-success"})
     </p>
-    <table id="example" class="table table-striped table-bordered table-hover dt-responsive nowrap" style="width: 100%">
+
+    <table id="example1" class="table table-striped table-bordered table-hover dt-responsive nowrap" style="width: 100%">
+
         <thead>
+        
         <tr class="bg-info">
             <th>
                 SL
+            </th>
+            <th>
+                Action
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Requisition.FromPlace)
@@ -74,9 +66,7 @@
             <th>
                 @Html.DisplayNameFor(model => model.Requisition.Description)
             </th>
-            <th>
-                Action
-            </th>
+            
         </tr>
 
         </thead>
@@ -91,6 +81,17 @@
                     <tr>
                         <td>
                             @sl
+
+                        </td>
+                        <td>
+                            @if (item.StatusType == "New")
+                            {
+                                @Html.ActionLink("Edit", "Edit", new { id = item.RequisitionId }, new { @class = "btn btn-warning btn-sm" })<span> </span>
+                            }
+
+                            @Html.ActionLink("Details", "Details", new { id = item.Requisition.Id }, new { @class = "btn btn-success btn-sm" }) <span> </span>
+
+                            @Html.ActionLink("Feedback", "Feedback", new { requisitionId = item.Id }, new { @class = "btn btn-info btn-sm" })
 
                         </td>
                         <td>
@@ -123,17 +124,7 @@
                         <td>
                             @Html.DisplayFor(modelItem => item.Requisition.Description)
                         </td>
-                        <td>
-                            @if (item.StatusType == "New")
-                            {
-                                @Html.ActionLink("Edit", "Edit", new { id = item.RequisitionId },new {@class="btn btn-warning btn-sm"})<span> </span>
-                            }
-
-                            @Html.ActionLink("Details", "Details", new {id = item.Requisition.Id}, new { @class = "btn btn-success btn-sm" }) <span> </span>
-
-                            @Html.ActionLink("Feedback", "Feedback", new {requisitionId = item.Id}, new { @class = "btn btn-info btn-sm" })
-
-                        </td>
+                        
                     </tr>
                 }
             }
@@ -144,7 +135,9 @@
             <th>
                 SL
             </th>
-
+            <th>
+                Action
+            </th>
             <th>
                 @Html.DisplayNameFor(model => model.Requisition.FromPlace)
             </th>
@@ -173,40 +166,9 @@
             <th>
                 @Html.DisplayNameFor(model => model.Requisition.Description)
             </th>
-            <th>
-                Action
-            </th>
+            
         </tr>
         </tfoot>
     </table>
 </div>
     
-@section Scripts {
-
-    @Scripts.Render("~/bundles/jqueryval")
-
-    <script src="~/Scripts/moment.js"></script>
-    <script src="~/Scripts/bootstrap-datetimepicker.js"></script>
-    <script src="~/Scripts/RequisitionJs/RequisitionDataTime.js"></script>
-    <script src="~/Scripts/chosenDD/chosen_DD.js"></script>
-
-    <script src="https://cdn.datatables.net/1.10.19/js/jquery.dataTables.min.js" type="text/javascript"></script>
-    <script src="https://cdn.datatables.net/1.10.19/js/dataTables.semanticui.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.3.1/semantic.min.js"></script>
-
-    <script type="text/javascript" src="https://cdn.datatables.net/responsive/2.2.3/js/dataTables.responsive.min.js"></script>
-    <script type="text/javascript" src="https://cdn.datatables.net/responsive/2.2.3/js/responsive.bootstrap.min.js"></script>
-
-    <script>
-
-        $(document).ready(function () {
-            $('#example').DataTable({ responsive: true, "autoWidth": false });
-
-        });
-
-        $(document).ready(function () {
-            $('#example1').DataTable({ responsive: true, "autoWidth": false });
-
-        });
-    </script>
-}
